--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.application.name=hello_event
 server.port=8081
 spring.datasource.url=jdbc:mysql://localhost:3306/hello_event_db?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
