ajouter dto et des nouvelles fonctionalite

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=hello_event
 server.port=8081
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/hello_event_db?createDatabaseIfNotExist=true
-spring.datasource.url=jdbc:mysql://mysqldb:3306/hello_event_db?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/hello_event_db?createDatabaseIfNotExist=true
+#spring.datasource.url=jdbc:mysql://mysqldb:3306/hello_event_db?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -15,5 +15,5 @@ logging.level.org.springframework=DEBUG
 
 spring.main.allow-circular-references=true
 
-spring.sql.init.platform=mysql
-spring.profiles.active=docker
+#spring.sql.init.platform=mysql
+#spring.profiles.active=docker
